java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/BrokenFileNoHighlighting.java
public class A {
}

<error descr="'class' or 'interface' expected">}</error>

int a = 1;
